# vala-indenter

./: README.md  meson.build
src/: gtksourcevalaindenter.c  gtksourcevalaindenter.h  gtksourcevalaindenter.vapi  main.vala  meson.build
